--- a/src/pages/user.html
+++ b/src/pages/user.html
@@ -28,9 +28,7 @@
                 placeholder="Search"
                 aria-label="Search"
               />
-              <button class="btn btn-outline-success" type="submit">
-                Search
-              </button>
+              <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
           </div>
         </div>
@@ -52,217 +50,18 @@
               <th scope="col">company</th>
             </tr>
           </thead>
-          <tbody class="js-user-table">
-            <tr data-userid="1">
-              <th scope="row">1</th>
-              <td>Leanne Graham</td>
-              <td>Bret</td>
-              <td>Sincere@april.biz</td>
-              <td>Gwenborough</td>
-              <td>1-770-736-8031 x56442</td>
-              <td>hildegard.org</td>
-              <td>Romaguera-Crona</td>
-            </tr>
-          </tbody>
+          <tbody class="js-user-table"></tbody>
         </table>
       </div>
       <div class="row">
         <h2>Albums</h2>
-        <ol class="list-group list-group-numbered js-album">
-          <li
-            class="list-group-item d-flex justify-content-between align-items-start js-list-user-album"
-            data-id="1"
-          >
-            <div class="ms-2 me-auto">
-              <div class="fw-bold">quidem molestiae enim</div>
-            </div>
-            <span class="badge bg-primary rounded-pill">rat</span>
-          </li>
-          <li
-            class="list-group-item d-flex justify-content-between align-items-start js-list-user-album"
-            data-id="2"
-          >
-            <div class="ms-2 me-auto">
-              <div class="fw-bold">sunt qui excepturi placeat culpa</div>
-            </div>
-            <span class="badge bg-primary rounded-pill">rat</span>
-          </li>
-          <li
-            class="list-group-item d-flex justify-content-between align-items-start js-list-user-album"
-            data-id="3"
-          >
-            <div class="ms-2 me-auto">
-              <div class="fw-bold">omnis laborum odio</div>
-            </div>
-            <span class="badge bg-primary rounded-pill">rat</span>
-          </li>
-          <li
-            class="list-group-item d-flex justify-content-between align-items-start js-list-user-album"
-            data-id="4"
-          >
-            <div class="ms-2 me-auto">
-              <div class="fw-bold">
-                non esse culpa molestiae omnis sed optio
-              </div>
-            </div>
-            <span class="badge bg-primary rounded-pill">rat</span>
-          </li>
-          <li
-            class="list-group-item d-flex justify-content-between align-items-start js-list-user-album"
-            data-id="5"
-          >
-            <div class="ms-2 me-auto">
-              <div class="fw-bold">eaque aut omnis a</div>
-            </div>
-            <span class="badge bg-primary rounded-pill">rat</span>
-          </li>
-          <li
-            class="list-group-item d-flex justify-content-between align-items-start js-list-user-album"
-            data-id="6"
-          >
-            <div class="ms-2 me-auto">
-              <div class="fw-bold">natus impedit quibusdam illo est</div>
-            </div>
-            <span class="badge bg-primary rounded-pill">rat</span>
-          </li>
-          <li
-            class="list-group-item d-flex justify-content-between align-items-start js-list-user-album"
-            data-id="7"
-          >
-            <div class="ms-2 me-auto">
-              <div class="fw-bold">quibusdam autem aliquid et et quia</div>
-            </div>
-            <span class="badge bg-primary rounded-pill">rat</span>
-          </li>
-          <li
-            class="list-group-item d-flex justify-content-between align-items-start js-list-user-album"
-            data-id="8"
-          >
-            <div class="ms-2 me-auto">
-              <div class="fw-bold">qui fuga est a eum</div>
-            </div>
-            <span class="badge bg-primary rounded-pill">rat</span>
-          </li>
-          <li
-            class="list-group-item d-flex justify-content-between align-items-start js-list-user-album"
-            data-id="9"
-          >
-            <div class="ms-2 me-auto">
-              <div class="fw-bold">saepe unde necessitatibus rem</div>
-            </div>
-            <span class="badge bg-primary rounded-pill">rat</span>
-          </li>
-          <li
-            class="list-group-item d-flex justify-content-between align-items-start js-list-user-album"
-            data-id="10"
-          >
-            <div class="ms-2 me-auto">
-              <div class="fw-bold">distinctio laborum qui</div>
-            </div>
-            <span class="badge bg-primary rounded-pill">rat</span>
-          </li>
-          <li
-            class="list-group-item d-flex justify-content-between align-items-start js-list-user-album"
-            data-id="1"
-          >
-            <div class="ms-2 me-auto">
-              <div class="fw-bold">quidem molestiae enim</div>
-            </div>
-            <span class="badge bg-primary rounded-pill">rat</span>
-          </li>
-          <li
-            class="list-group-item d-flex justify-content-between align-items-start js-list-user-album"
-            data-id="2"
-          >
-            <div class="ms-2 me-auto">
-              <div class="fw-bold">sunt qui excepturi placeat culpa</div>
-            </div>
-            <span class="badge bg-primary rounded-pill">rat</span>
-          </li>
-          <li
-            class="list-group-item d-flex justify-content-between align-items-start js-list-user-album"
-            data-id="3"
-          >
-            <div class="ms-2 me-auto">
-              <div class="fw-bold">omnis laborum odio</div>
-            </div>
-            <span class="badge bg-primary rounded-pill">rat</span>
-          </li>
-          <li
-            class="list-group-item d-flex justify-content-between align-items-start js-list-user-album"
-            data-id="4"
-          >
-            <div class="ms-2 me-auto">
-              <div class="fw-bold">
-                non esse culpa molestiae omnis sed optio
-              </div>
-            </div>
-            <span class="badge bg-primary rounded-pill">rat</span>
-          </li>
-          <li
-            class="list-group-item d-flex justify-content-between align-items-start js-list-user-album"
-            data-id="5"
-          >
-            <div class="ms-2 me-auto">
-              <div class="fw-bold">eaque aut omnis a</div>
-            </div>
-            <span class="badge bg-primary rounded-pill">rat</span>
-          </li>
-          <li
-            class="list-group-item d-flex justify-content-between align-items-start js-list-user-album"
-            data-id="6"
-          >
-            <div class="ms-2 me-auto">
-              <div class="fw-bold">natus impedit quibusdam illo est</div>
-            </div>
-            <span class="badge bg-primary rounded-pill">rat</span>
-          </li>
-          <li
-            class="list-group-item d-flex justify-content-between align-items-start js-list-user-album"
-            data-id="7"
-          >
-            <div class="ms-2 me-auto">
-              <div class="fw-bold">quibusdam autem aliquid et et quia</div>
-            </div>
-            <span class="badge bg-primary rounded-pill">rat</span>
-          </li>
-          <li
-            class="list-group-item d-flex justify-content-between align-items-start js-list-user-album"
-            data-id="8"
-          >
-            <div class="ms-2 me-auto">
-              <div class="fw-bold">qui fuga est a eum</div>
-            </div>
-            <span class="badge bg-primary rounded-pill">rat</span>
-          </li>
-          <li
-            class="list-group-item d-flex justify-content-between align-items-start js-list-user-album"
-            data-id="9"
-          >
-            <div class="ms-2 me-auto">
-              <div class="fw-bold">saepe unde necessitatibus rem</div>
-            </div>
-            <span class="badge bg-primary rounded-pill">rat</span>
-          </li>
-          <li
-            class="list-group-item d-flex justify-content-between align-items-start js-list-user-album"
-            data-id="10"
-          >
-            <div class="ms-2 me-auto">
-              <div class="fw-bold">distinctio laborum qui</div>
-            </div>
-            <span class="badge bg-primary rounded-pill">rat</span>
-          </li>
-        </ol>
+        <ul class="list-group list-group-numbered js-album"></ul>
       </div>
     </div>
 
     <div
       id="prevue--wrapper"
-      style="
-        width: 50vw;
-        transition: opacity 0.2s ease 0s, left 0.2s ease 0s, right 0.2s ease 0s;
-      "
+      style="width: 50vw; transition: opacity 0.2s ease 0s, left 0.2s ease 0s, right 0.2s ease 0s"
     >
       <div id="prevue--dragger"></div>
       <div class="prevue--wrapper-title">
@@ -279,11 +78,7 @@
             stroke="currentColor"
             stroke-width="2"
           >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M6 18L18 6M6 6l12 12"
-            ></path>
+            <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"></path>
           </svg>
         </div>
         <div class="prevue--action-switch-sides">
@@ -309,19 +104,11 @@
             stroke="currentColor"
             stroke-width="2"
           >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M9 5l7 7-7 7"
-            ></path>
+            <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7"></path>
           </svg>
         </div>
         <div class="prevue--action-settings" title="Prevue Options">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 20 20"
-            fill="currentColor"
-          >
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
             <path
               fill-rule="evenodd"
               d="M11.49 3.17c-.38-1.56-2.6-1.56-2.98 0a1.532 1.532 0 01-2.286.948c-1.372-.836-2.942.734-2.106 2.106.54.886.061 2.042-.947 2.287-1.561.379-1.561 2.6 0 2.978a1.532 1.532 0 01.947 2.287c-.836 1.372.734 2.942 2.106 2.106a1.532 1.532 0 012.287.947c.379 1.561 2.6 1.561 2.978 0a1.533 1.533 0 012.287-.947c1.372.836 2.942-.734 2.106-2.106a1.533 1.533 0 01.947-2.287c1.561-.379 1.561-2.6 0-2.978a1.532 1.532 0 01-.947-2.287c.836-1.372-.734-2.942-2.106-2.106a1.532 1.532 0 01-2.287-.947zM10 13a3 3 0 100-6 3 3 0 000 6z"
